--- a/Project/Project/code-errors.html
+++ b/Project/Project/code-errors.html
@@ -14,7 +14,7 @@
 
     <p><a href="https://www.learncodinganywhere.com/"> This is The Tech Academy's website.</a></p>
 
-        <img src="https://www.learncodinganywhere.com/images/tech_logo/The%20Tech%20Academy%20Logo.png" alt="The Tech Academy Logo" width=(600px); height=(300px)>
+        <img src="https://www.learncodinganywhere.com/images/tech_logo/The%20Tech%20Academy%20Logo.png" style="border: red dashed 2px;" alt="The Tech Academy Logo" width=(600px); height=(300px)>
 
         <h3><center>Have you seen The Tech Academy's Student Orientation video?</center></h3>
 
